spec/e2e/constructor/extra_arguments.lit
type Foo {
  init { |a, b|
    self.a = a
    self.b = b
  }
}

var foo = Foo(1, 2, 3, 4) # error: [line 8] Runtime error: Expected 2 arguments but got 4.
